header z-index fix

--- a/src/pages/header/header1/header1.module.css
+++ b/src/pages/header/header1/header1.module.css
@@ -2,6 +2,7 @@
     width: 100%;
     padding-bottom: 30px;
     position: relative;
+    z-index: 100;
 }
 .ul1 a:hover,
 .ul1 a:active {
